# duckdb-datalake-demo

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  duck.ipynb  pyproject.toml  requirements.txt
dags/: price_search.py  sentiment_analysis.py
dags/common/: gsc.py  settings.py  sftp.py  utils.py
dags/services/: price_search_sftp.py  sentiment_analysis.py
dags/sql/: create_customers.sql  create_price_search_fact.sql  create_products.sql  create_sentiment_analysis_fact.sql  create_sentiment_status.sql  create_source.sql  create_stock_control.sql  create_stores.sql  extract_price_search.sql  extract_sentiment_analysis.sql  load_price_search.sql  load_sentiment_analysis.sql  transformation_price_search.sql  transformation_sentiment_analysis.sql
sftp/price_search/: file2024-02-01.csv  file2024-03-01.csv  file2024-04-01.csv
sftp/sentiment_analysis/: file2024-02-01.json  file2024-03-01.json
